# data-orchestration-and-scheduling-samples

./: .gitignore  README.md
airflow/: README.md  docker-compose.yaml
airflow/dags/: questdb_partition_exporter.py
bash/: README.md  drop_partitions_older_than_21_days.sh
dagster/: README.md
dagster/questdb_partition_exporter/: README.md  config_vars.yml  pyproject.toml  setup.cfg  setup.py
dagster/questdb_partition_exporter/questdb_partition_exporter/: assets.py  definitions.py
