[project]
name = "questdb_partition_exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"

# Combine all dependencies into a single block
dependencies = [
    "dagster",  
    "dagster-cloud",
    "boto3",
    "psycopg",  # Note: Correct package name is psycopg2-binary
    "pendulum"
]

# Define dev dependencies
[project.optional-dependencies]
dev = [
    "dagit",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]  # Ensure setuptools and wheel are both specified
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "questdb_partition_exporter.definitions"
project_name = "questdb_partition_exporter"

[tool.setuptools.packages.find]
exclude=["questdb_partition_exporter_tests"]

